# python-mcp-over-tsp

./: README.md  pyproject.toml
demo/: README.md
demo/client/: README.md  client.py  pyproject.toml
demo/server/: README.md  pyproject.toml  server.py
examples/fastmcp/: complex_inputs.py  desktop.py  echo.py  parameter_descriptions.py  readme-quickstart.py  screenshot.py  simple_echo.py  text_me.py  unicode_example.py
src/mcp/client/: sse.py
src/mcp/server/: __init__.py  sse.py
src/mcp/server/fastmcp/: __init__.py  server.py
src/mcp/shared/: tmcp.py
tests/issues/: test_100_tool_listing.py  test_141_resource_templates.py  test_152_resource_mime_type.py  test_188_concurrency.py
