[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["anthropic>=0.49.0", "mcp", "python-dotenv>=1.1.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
mcp = { path = "../../" }
